# agentic-product-protocol-mcp

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  server.py
src/clients/: __init__.py  products.py
src/tools/: __init__.py  products.py
