[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-product-protocol-mcp"
version = "0.1.0"
description = "Klarna-style product discovery for AI agents — structured product data, comparison, feed conversion"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "AiAgentKarl"}
]
keywords = ["mcp", "ai-agents", "product-discovery", "e-commerce", "klarna", "agentic-commerce"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/AiAgentKarl/agentic-product-protocol-mcp"
Repository = "https://github.com/AiAgentKarl/agentic-product-protocol-mcp"
Issues = "https://github.com/AiAgentKarl/agentic-product-protocol-mcp/issues"

[project.scripts]
product-protocol-server = "src.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
